samples/_failures_safe/1761635365_4a456c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a2fbc4ac.c: In function ‘tokenize’:
./samples/SAFE/__tmp_a2fbc4ac.c:181:13: error: ‘read’ undeclared (first use in this function); did you mean ‘fread’?
  181 |             read
      |             ^~~~
      |             fread
./samples/SAFE/__tmp_a2fbc4ac.c:181:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a2fbc4ac.c:181:17: error: expected ‘;’ at end of input
  181 |             read
      |                 ^
      |                 ;
./samples/SAFE/__tmp_a2fbc4ac.c:181:13: error: expected declaration or statement at end of input
  181 |             read
      |             ^~~~
./samples/SAFE/__tmp_a2fbc4ac.c:181:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a2fbc4ac.c:181:13: error: expected declaration or statement at end of input
